# DeT

./: README.md  pyproject.toml
call_flash_detector/: detector.py  main.py  notifier.py
call_flash_detector/data/seat_presence_checker/: layout.json  state.json
data/seat_presence_checker/: layout.json  state.json
seat_presence_checker/: main.py
src/call_flash_detector/: __init__.py  detector.py  main.py
tests/: test_detector_config_normalization.py  test_flash_state_tracker.py
