[project]
name = "call-flash-detector"
version = "0.1.0"
description = "Detect red LED ON-state from webcam feed and send Windows call notifications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0",
  "opencv-python>=4.10.0.84",
  "plyer>=2.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[project.scripts]
call-flash-detector = "call_flash_detector.main:run"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/call_flash_detector"]

[tool.pytest.ini_options]
pythonpath = ["src"]
