[project]
name = "det-tools"
version = "0.1.0"
description = "LED flash detector and seat presence checker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0",
  "opencv-python>=4.10.0.84",
  "plyer>=2.1.0"
]

[project.scripts]
call-flash-detector = "call_flash_detector.main:run"
seat-presence-checker = "seat_presence_checker.main:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["call_flash_detector", "seat_presence_checker"]

[tool.uv]
package = true
